2008-06-17 Jim Garlick <garlick@llnl.gov>

	* src/device.c : Fix bug where expired delays could be extended by
	the device timeout.

	* test/baytech.c : Fix bug in plug array declarations.

	* test/tregex.c : Initialize error.c for out of memory case.

2008-06-16 Jim Garlick <garlick@llnl.gov>

	* etc/apcpdu3.dev : Fixed problem with intermittent failures
	of query script.

	* etc/apcpdu.dev : Backport change from above.

2008-06-13 Jim Garlick <garlick@llnl.gov>

	* test/baytech.c : Add classic baytech rpc3 support.

	* test/t25, test/t26 : Investigate some funny business with delay
	handling.

	* test/27, test/28 : Check classic baytech functionality.

2008-06-12 Jim Garlick <garlick@llnl.gov>

	* test/baytech.c : New, Baytech emulator.

	* test/t21, test/t22 : Check basic baytech-rpc3-nc functionality.

	* test/t23, test/t24 : Check basic baytech-rpc28-nc functionality.

	* src/regex.c : Refuse to compile regex > 256 bytes for portability.

	* etc/baytech-rpc28-nc.dev : Eliminate delays from initial handshake.

	* test/tregex.c : Test some more assumptions about how regexes work.

2008-06-11 Jim Garlick <garlick@llnl.gov>

	* src/hostlist.[ch], src/list.[ch], src/cbuf.[ch] :
	Update to latest versions from lsd-tools trunk.

	* test/t17.conf, test/t18.conf : Increase timeouts so tests can
	succeed on slower systems.

	* src/powerman.c : Append any "dangling" arguments to the target
	list of the last command queued.

2008-06-10 Jim Garlick <garlick@llnl.gov>

	* src/powerman.c : Misc cleanup:
	- make server_fd not global
	- handle --telemetry and --exprange like other commands by 
	  enqueuing them at the head of the command queue.
	- drop hard coded daemon and config file locations.
	- add --ignore-errs option.

	* test/* : Lots of new tests.

	* device_pipe.c : Make pty connection use raw mode.

	* src/xregex.c : Pass REG_NOTBOL and REG_NOTEOL to regexec.
	The end of line ($) and beginning of line (^) operators cannot