@@ -7,6 +7,9 @@
 
 	* test/tregex.c : Initialize error.c for out of memory case.
 
+	* src/poweramn.c : Make argument handling fully backwards compat
+	with powerman-2.0 and earlier.
+
 2008-06-16 Jim Garlick <garlick@llnl.gov>
 
 	* etc/apcpdu3.dev : Fixed problem with intermittent failures
